LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/GM_INDURSTRIES__x.object-meta.xml
<CustomObject>
    <description>GM_INDURSTRIES</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_INDURSTRIES</externalName>
    <label>GM_INDURSTRIES</label>
    <pluralLabel>GM_INDURSTRIES</pluralLabel>
</CustomObject>