LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/fields/CR_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>CR_USER_ID__c</fullName>
    <description>CR_USER_ID</description>
    <externalDeveloperName>CR_USER_ID</externalDeveloperName>
    <label>CR_USER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>