LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/fields/DEL_DATE__c.field-meta.xml
<CustomField>
    <fullName>DEL_DATE__c</fullName>
    <description>DEL_DATE</description>
    <externalDeveloperName>DEL_DATE</externalDeveloperName>
    <label>DEL_DATE</label>
    <type>DateTime</type>
</CustomField>