LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/fields/GR_COMP_ID__c.field-meta.xml
<CustomField>
    <fullName>GR_COMP_ID__c</fullName>
    <description>GR_COMP_ID</description>
    <externalDeveloperName>GR_COMP_ID</externalDeveloperName>
    <label>GR_COMP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>