LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/fields/INDUSTRY_DESC__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRY_DESC__c</fullName>
    <description>INDUSTRY_DESC</description>
    <externalDeveloperName>INDUSTRY_DESC</externalDeveloperName>
    <label>INDUSTRY_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>