LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/fields/INDUSTRY_ID__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRY_ID__c</fullName>
    <description>INDUSTRY_ID</description>
    <externalDeveloperName>INDUSTRY_ID</externalDeveloperName>
    <label>INDUSTRY_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>