LinKreta_POC_Repository/force-app/main/default/objects/GM_INDURSTRIES__x/fields/INDUSTRY_MID__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRY_MID__c</fullName>
    <description>INDUSTRY_MID</description>
    <externalDeveloperName>INDUSTRY_MID</externalDeveloperName>
    <label>INDUSTRY_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>